--- a/app/src/main/res/layout/card_view_history.xml
+++ b/app/src/main/res/layout/card_view_history.xml
@@ -250,7 +250,7 @@
 
             <ImageView
                 android:id="@+id/mensajeFoto"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:maxWidth="700dp"
