--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="25dp"
-                android:text="Seleccione la cantidad a eliminar"
+                android:text="Ingrese la cantidad a eliminar"
                 android:textColor="@android:color/holo_blue_dark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
@@ -77,6 +77,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/darkblueshape"
+                android:hint="10"
                 android:inputType="number"
                 android:paddingStart="18dp"
                 android:paddingEnd="12dp"
